docs/absorbed-from-phenotype-lexer-rs/tests/snapshots/snapshot_tests__snapshot_if_statement.snap
---
source: tests/snapshot_tests.rs
assertion_line: 22
expression: tokens
---
[
    Token {
        token_type: If,
        span: Span {
            start: Loc {
                line: 1,
                column: 3,
            },
            end: Loc {
                line: 1,
                column: 3,
            },
        },
    },
    Token {
        token_type: Identifier(
            "x",
        ),
        span: Span {
            start: Loc {
                line: 1,
                column: 5,
            },
            end: Loc {
                line: 1,
                column: 5,
            },
        },
    },
    Token {
        token_type: Greater,
        span: Span {
            start: Loc {
                line: 1,
                column: 6,
            },
            end: Loc {
                line: 1,
                column: 6,
            },
        },
    },
    Token {
        token_type: Integer(
            0,
        ),
        span: Span {
            start: Loc {
                line: 1,
                column: 9,
            },
            end: Loc {
                line: 1,
                column: 9,
            },
        },
    },
    Token {
        token_type: LeftBrace,
        span: Span {
            start: Loc {
                line: 1,
                column: 10,
            },
            end: Loc {
                line: 1,
                column: 10,
            },
        },
    },
    Token {
        token_type: Return,
        span: Span {
            start: Loc {
                line: 1,
                column: 18,
            },
            end: Loc {
                line: 1,
                column: 18,
            },
        },
    },
    Token {
        token_type: Integer(
            1,
        ),
        span: Span {
            start: Loc {
                line: 1,
                column: 20,
            },
            end: Loc {
                line: 1,
                column: 20,
            },
        },
    },
    Token {
        token_type: Semicolon,
        span: Span {
            start: Loc {
                line: 1,
                column: 20,
            },
            end: Loc {
                line: 1,
                column: 20,
            },
        },
    },
    Token {
        token_type: RightBrace,
        span: Span {
            start: Loc {
                line: 1,
                column: 22,
            },
            end: Loc {
                line: 1,
                column: 22,
            },
        },
    },
    Token {
        token_type: Eof,
        span: Span {
            start: Loc {
                line: 1,
                column: 23,
            },
            end: Loc {
                line: 1,
                column: 23,
            },
        },
    },
]
